view on browser or on formelo

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
         src: url('fonts/Avenir-Black.ttf');
       }
     </style>
-    <title>Compare Rides</title>
+    <title>Learn on MUTA</title>
   </head>
   <body>
     <div id="root"></div>
